// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JobsListSection > renders default as expected 1`] = `
<div>
  <section
    class="section section-body jobs-list-section"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between mb-6"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative ml-[-0.08em] bluedot-h2"
        >
          Careers at BlueDot Impact
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="invisible relative bottom-48"
        id="open-roles-anchor"
      />
      <div
        class="jobs-list__container flex flex-col gap-8"
      >
        <div
          class="jobs-list__listing"
        >
          <a
            class="card flex items-start transition-transform duration-200 flex-row w-full hover:scale-[1.01] jobs-list__card container-lined hover:container-elevated p-8"
            href="/join-us/software-engineer"
          >
            <div
              class="card__content flex gap-6 w-full flex-1 justify-between flex-row w-full"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title bluedot-h4 mb-2"
                >
                  Software Engineer
                </p>
                <p
                  class="card__subtitle bluedot-p "
                >
                  Full-time position
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <button
                  class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer not-prose cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  type="button"
                >
                  <span
                    class="cta-button__text"
                  >
                    Learn more
                  </span>
                  <span
                    class="cta-button__chevron ml-3"
                  >
                    <svg
                      class="cta-button__chevron-icon size-2"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 320 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </a>
        </div>
        <div
          class="jobs-list__listing"
        >
          <a
            class="card flex items-start transition-transform duration-200 flex-row w-full hover:scale-[1.01] jobs-list__card container-lined hover:container-elevated p-8"
            href="/join-us/product-manager"
          >
            <div
              class="card__content flex gap-6 w-full flex-1 justify-between flex-row w-full"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title bluedot-h4 mb-2"
                >
                  Product Manager
                </p>
                <p
                  class="card__subtitle bluedot-p "
                >
                  Full-time position
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <button
                  class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer not-prose cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  type="button"
                >
                  <span
                    class="cta-button__text"
                  >
                    Learn more
                  </span>
                  <span
                    class="cta-button__chevron ml-3"
                  >
                    <svg
                      class="cta-button__chevron-icon size-2"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 320 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`JobsListSection > renders empty state when no jobs are provided 1`] = `
<div>
  <section
    class="section section-body jobs-list-section"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between mb-6"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative ml-[-0.08em] bluedot-h2"
        >
          Careers at BlueDot Impact
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="invisible relative bottom-48"
        id="open-roles-anchor"
      />
      <p
        class="bluedot-p not-prose"
      >
        We're not currently running any open hiring rounds at the moment.
      </p>
    </div>
  </section>
</div>
`;

exports[`JobsListSection > renders mobile as expected 1`] = `
<div>
  <section
    class="section section-body jobs-list-section"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between mb-6"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative ml-[-0.08em] bluedot-h2"
        >
          Careers at BlueDot Impact
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="invisible relative bottom-48"
        id="open-roles-anchor"
      />
      <div
        class="jobs-list__container flex flex-col gap-8"
      >
        <div
          class="jobs-list__listing"
        >
          <div
            class="card flex items-start transition-transform duration-200 flex-col jobs-list__card container-lined hover:container-elevated p-8"
          >
            <div
              class="card__content flex gap-6 w-full flex-1 justify-between flex-col"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title bluedot-h4 mb-2"
                >
                  Software Engineer
                </p>
                <p
                  class="card__subtitle bluedot-p "
                >
                  Full-time position
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <a
                  class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer not-prose cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  href="/join-us/software-engineer"
                  tabindex="0"
                >
                  <span
                    class="cta-button__text"
                  >
                    Learn more
                  </span>
                  <span
                    class="cta-button__chevron ml-3"
                  >
                    <svg
                      class="cta-button__chevron-icon size-2"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 320 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
                      />
                    </svg>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="jobs-list__listing"
        >
          <div
            class="card flex items-start transition-transform duration-200 flex-col jobs-list__card container-lined hover:container-elevated p-8"
          >
            <div
              class="card__content flex gap-6 w-full flex-1 justify-between flex-col"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title bluedot-h4 mb-2"
                >
                  Product Manager
                </p>
                <p
                  class="card__subtitle bluedot-p "
                >
                  Full-time position
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <a
                  class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer not-prose cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  href="/join-us/product-manager"
                  tabindex="0"
                >
                  <span
                    class="cta-button__text"
                  >
                    Learn more
                  </span>
                  <span
                    class="cta-button__chevron ml-3"
                  >
                    <svg
                      class="cta-button__chevron-icon size-2"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 320 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
                      />
                    </svg>
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
